[gd_scene load_steps=18 format=3 uid="uid://cpqopqy873vp4"]

[ext_resource type="Script" path="res://scenes/fox.gd" id="1_lncvu"]
[ext_resource type="PackedScene" uid="uid://wq4d6kqarmf8" path="res://Graphics/Ships/Fox1.blend" id="1_ngsl1"]
[ext_resource type="Texture2D" uid="uid://d0gs3aiss1h8v" path="res://Graphics/2dSprites/crosshair131.png" id="3_u48rh"]
[ext_resource type="Texture2D" uid="uid://c5s4s22fs7kyy" path="res://Graphics/2dSprites/crosshair125.png" id="4_6nhxf"]
[ext_resource type="AudioStream" uid="uid://bthbr12eghh1q" path="res://Sounds/hit.wav" id="5_fcxrd"]
[ext_resource type="AudioStream" uid="uid://csaw42bcgbah3" path="res://Sounds/Score.wav" id="6_6idgo"]
[ext_resource type="AudioStream" uid="uid://ccu4ixpi42qbw" path="res://Sounds/explosion.wav" id="7_buis4"]
[ext_resource type="AudioStream" uid="uid://03jpq4qqyvyg" path="res://Sounds/laser.wav" id="8_2r3gq"]
[ext_resource type="AudioStream" uid="uid://ou448qabivv1" path="res://Sounds/jet-loop-01-32474.mp3" id="9_auosb"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_jaac3"]
points = PackedVector3Array(3.84615, -0.00775373, 0.20776, -1.85801, 1.10104, 0.281482, 2.31243, -0.238319, 6.76628, 3.84615, -0.741614, 0.20776, 3.84615, -0.00775373, -0.209101, -3.8468, 1.24541, 0.356544, -1.85801, 1.10104, -0.282822, 0.29119, -0.31811, 6.8467, -1.85801, -1.48081, 0.281482, 3.84615, -0.741614, -0.209101, 2.31243, -0.238319, -6.76762, -3.8468, 1.24541, -0.357883, -5.3598, 0.383727, 0.166208, -5.3598, -0.505978, 0.166208, -3.8468, -1.33751, 0.356544, -1.85801, -1.48081, -0.282822, 0.29119, -0.31811, -6.8467, -5.3598, 0.383727, -0.167549, -5.3598, -0.505978, -0.167549, -3.8468, -1.33751, -0.357883)

[sub_resource type="Animation" id="Animation_hkr4q"]
resource_name = "BarrelRoll"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.566667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 6.28319)]
}

[sub_resource type="Animation" id="Animation_j8mfq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Fox1:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Fox1:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -1.5708, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Fox1/Cube:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../death:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_na6c5"]
resource_name = "death"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Fox1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-24.41, -250, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Fox1:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -1.5708, 0), Vector3(4.10501, 2.48884, -3.48368)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../death:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xolce"]
_data = {
"BarrelRoll": SubResource("Animation_hkr4q"),
"RESET": SubResource("Animation_j8mfq"),
"death": SubResource("Animation_na6c5")
}

[sub_resource type="Animation" id="Animation_8eylt"]
resource_name = "Invincible"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Fox1/Cube:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_xbxqf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Fox1/Cube:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3y7gq"]
_data = {
"Invincible": SubResource("Animation_8eylt"),
"RESET": SubResource("Animation_xbxqf")
}

[node name="Fox" type="CharacterBody3D" groups=["Fox"]]
collision_mask = 24
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_lncvu")

[node name="Fox1" parent="." instance=ExtResource("1_ngsl1")]
transform = Transform3D(-3.61999e-06, 0, -1, 0, 1, 0, 1, 0, -3.61999e-06, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_jaac3")

[node name="Timer" type="Node" parent="."]

[node name="CanBarrelTimer" type="Timer" parent="Timer"]
wait_time = 3.0
one_shot = true

[node name="Animation" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Animation"]
libraries = {
"": SubResource("AnimationLibrary_xolce")
}

[node name="InvinciblePlayer" type="AnimationPlayer" parent="Animation"]
libraries = {
"": SubResource("AnimationLibrary_3y7gq")
}

[node name="WeaponHandler" type="Node3D" parent="."]

[node name="BarrelEnd" type="Marker3D" parent="WeaponHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.10012)

[node name="Sprite3D" type="Sprite3D" parent="WeaponHandler"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 15)
texture = ExtResource("3_u48rh")

[node name="Crosshair" type="Sprite3D" parent="WeaponHandler"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 25)
texture = ExtResource("4_6nhxf")

[node name="AreaTriggers" type="Node3D" parent="."]

[node name="InvincibleTimer" type="Timer" parent="."]
one_shot = true

[node name="hit_by" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_fcxrd")

[node name="Score" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6idgo")

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_buis4")

[node name="Laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_2r3gq")
volume_db = -5.0

[node name="JetLoop" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_auosb")
volume_db = 10.0
max_db = 6.0
parameters/looping = true

[connection signal="timeout" from="Timer/CanBarrelTimer" to="." method="_on_can_barrel_timer_timeout"]
[connection signal="animation_finished" from="Animation/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_invincible_timer_timeout"]

[editable path="Fox1"]
